# cost-optimized-inference

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPLETION_SUMMARY.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.agents/skills/benchmark-integrity-review/: SKILL.md
.agents/skills/inference-architecture-review/: SKILL.md
.github/workflows/: ci.yml  docker-build.yml
benchmarks/workloads/: smoke.jsonl
docs/: 00_STRATEGY_BRIEF.md  01_TARGET_ARCHITECTURE.md  02_IMPLEMENTATION_ROADMAP.md  03_BENCHMARK_AND_EVAL_PLAN.md  04_CODEX_QUALITY_SYSTEM.md  README.md  architecture.md
inference_engine/: __init__.py
k8s/: deployment.yaml  namespace.yaml  service.yaml
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana-dashboards/: inference-overview.json
scripts/: benchmark.py  cost_analysis.py  run_benchmark.py
src/inference_engine/: cli.py  config.py  main.py
src/inference_engine/adapters/api/: __init__.py  app.py  dependencies.py
src/inference_engine/adapters/workers/: batch_processor.py  cache_warmer.py  metrics_aggregator.py
src/inference_engine/application/dto/: batch_dto.py  inference_dto.py  metrics_dto.py
src/inference_engine/application/services/: __init__.py
src/inference_engine/benchmarking/: __init__.py  budget.py  eval.py  export.py  harness.py  sqlite_ledger.py
src/inference_engine/domain/: __init__.py
src/inference_engine/domain/batching/: __init__.py  adaptive.py  algorithms.py  base.py  priority.py  semantic.py
src/inference_engine/domain/caching/: __init__.py  base.py  eviction.py  exact.py  prefix.py  semantic.py
src/inference_engine/domain/cost/: attribution.py  calculator.py  optimization.py  pricing.py
src/inference_engine/domain/models/: __init__.py  batch.py  cache.py  cost.py  request.py  response.py  routing.py
src/inference_engine/domain/routing/: __init__.py  base.py  (+6 more)
src/inference_engine/utils/: concurrency.py  result.py  similarity.py  text_utils.py  time.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_inference_pipeline.py  test_real_provider.py
tests/unit/: test_api_inference.py  test_benchmark_export.py  test_benchmark_harness.py  test_budget.py  test_cli.py  test_eval.py  test_imports.py  test_sqlite_benchmark_ledger.py
tests/unit/domain/: test_batching.py  test_caching.py  test_cost.py  test_routing.py
tests/unit/infrastructure/: test_openai_backend.py  test_request_log.py
(+39 files in other folders)
