[tool.poetry]
name = "cost-optimized-inference"
version = "0.1.0"
description = "Cost-Optimized Inference Engine: dynamic batching, KV-cache optimization, and cost-aware routing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "inference_engine", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic = ">=2.4,<3"
pydantic-settings = ">=2.0,<3"
structlog = "^24.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
redis = "^5.0.0"
prometheus-client = "^0.20.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
black = "^24.8.0"
ruff = "^0.6.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


