[project]
name = "cost-optimized-inference"
version = "0.1.0"
description = "Honest SLO-aware LLM inference gateway and benchmark lab"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Mohammad Atashi" }]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.4,<3",
  "pydantic-settings>=2,<3",
  "structlog>=23,<25",
  "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
]
providers = [
  "openai>=1.0,<2",
  "text-generation>=0.7,<1",
]
local-serving = [
  "vllm>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["structlog.*", "openai.*", "text_generation.*", "vllm.*"]
ignore_missing_imports = true
